fixed spacing between selected item and the rest

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -427,13 +427,9 @@ div.core
 
   li.toc-active:before
     content: ""
-    border-color: $core-color
-    border-style: solid
-    height: 0
-    width: 0
-    left: -1em
-    top: 1.4em
-    position: relative  
+    border-left: 4px solid
+    padding-right: 10px
+    margin-left: -14px
       
   ul
     margin: 0
@@ -446,7 +442,7 @@ div.core
   a 
     color: #fff
     text-decoration: none
-    display: block
+    display: inline
 
   .toc-h2 
     padding-left: 10px
